# rcars

./: .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  OPERATIONS.md  README.md  WORKLOG.md  alembic.ini  dev-services.sh  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  docs.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
ansible/: deploy.yml
ansible/tasks/: apply-infra.yml  apply-manifests.yml  build-api.yml  build-frontend.yml  mgmt-rbac.yml  namespace.yml  smoke-test.yml  wait-for-builds.yml  webhooks.yml
ansible/templates/: manifests-app.yaml.j2  manifests-infra.yaml.j2  manifests.yaml.j2
ansible/vars/: common.yml  dev.yml.example  prod.yml.example
docs/: architecture.md  deployment.md  development.md  guide-cli.md  guide-web.md  index.md  overview.md  token-usage.md  workers.md
docs/admin/: cli-guide.md  deployment.md  development.md  operations.md  (+2 more)
prompts/: match_event.txt  recommend.txt
src/api/: Containerfile  alembic.ini  pyproject.toml  requirements.lock.txt
src/api/alembic/: env.py  script.py.mako
src/api/alembic/versions/: 002_infrastructure_metadata.py  003_curated_duration.py  004_content_similarity.py  005_reporting_metrics.py  006_token_usage_provider.py  007_reporting_quarterly_data.py  008_catalog_soft_delete.py  009_rename_event_fit.py  010_windowed_unique_users.py  011_sliding_window_metrics.py  012_retirement_workflow.py  013_api_keys_external_auth.py  014_ignored_until.py
src/api/rcars/: cli.py  config.py  logging.py
src/api/rcars/api/: app.py  schemas.py  streaming.py
src/api/rcars/api/middleware/: auth.py  rate_limit.py  request_logging.py
src/api/rcars/api/routes/: admin.py  advisor.py  analysis.py  auth.py  catalog.py  health.py
src/api/rcars/data/: product-terms.yaml  workload_mapping.yaml
src/api/rcars/db/: __init__.py  database.py
src/api/rcars/prompts/: analyze_showroom.txt  rationale.txt  rationale_single.txt  rationale_synthesis.txt  triage.txt
src/api/rcars/services/: analyzer.py  catalog.py  event_parser.py  jira.py  reporting_sync.py  retirement.py  sandbox_summary.py  workload_scanner.py
src/api/rcars/services/recommender/: __init__.py  models.py  pipeline.py  rationale.py  triage.py  vector_search.py
src/api/rcars/workers/: __init__.py  base.py  ops.py  recommend.py  scan.py  settings.py
src/api/scripts/: migrate_to_content_model.py  migrate_token_usage.py
src/api/tests/: test_api_keys_db.py  test_app.py  test_auth_middleware.py  test_auth_routes.py  test_auth_security.py  test_auth_token.py  test_config.py  test_db.py  test_jira_service.py  test_logging.py  test_product_terms.py  test_reporting.py  test_retirement_workflow.py  test_services.py  test_streaming.py  test_workers.py
tests/: conftest.py  test_analyzer.py  test_catalog_reader.py  test_cli.py  test_config.py  test_db.py  test_integration.py  test_recommender.py
tools/: README.md  build-pgvector.md  rcars-login.py  rcars-login.sh
(+139 files in other folders)
