[project]
name = "rcars"
version = "2.0.0"
requires-python = ">=3.11"

dependencies = [
    "arq>=0.26",
    "click>=8.1",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "kubernetes>=29.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "rich>=13.0",
    "structlog>=24.0",
    "uvicorn>=0.30.0",
    "anthropic[vertex]>=0.40.0",
    "openai>=1.30.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
rcars = "rcars.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
rcars = ["prompts/*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
